<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appName">Jdroid Sample</string>
	<string name="home">Home</string>
	<string name="add">Add</string>

	<!-- Ads -->
	<string name="adMob">AdMob</string>
	<string name="displayInterstitial">Display Interstitial</string>
	<string name="houseAds">House Ads</string>

	<!-- Date & Time -->
	<string name="dateTime">Date &amp; Time</string>
	<string name="datePickerDialog">Date Picker Dialog</string>
	<string name="timePickerDialog">Time Picker Dialog</string>

	<!-- Image Loader -->
	<string name="universalImageLoader">Android Universal Image Loader</string>

	<!-- Exception Handling -->
	<string name="exceptionHandling">Exception Handling</string>

	<!-- Google Analytics -->
	<string name="googleAnalytics">Google Analytics</string>
	<string name="sendExampleEvent">Send Example Event</string>
	<string name="sendExampleTransaction">Send Example Transaction</string>
	<string name="sendExampleTiming">Send Example Timing</string>

	<!-- Google Cloud Messaging -->
	<string name="gcm">Google Cloud Messaging</string>

	<!-- Google Maps -->
	<string name="googleMaps">Google Maps</string>

	<!-- Http -->
	<string name="http">Http</string>
	<string name="httpGet">GET</string>
	<string name="httpPost">POST</string>
	<string name="httpPut">PUT</string>
	<string name="httpDelete">DELETE</string>
	<string name="httpPatch">PATCH</string>

	<!-- Nav Drawer -->
	<string name="navDrawer">Nav Drawer</string>
	<string name="leftCustomNavDrawer">Left Custom Nav Drawer</string>
	<string name="rightCustomNavDrawer">Right Custom Nav Drawer</string>
	<string name="noNavDrawer">No Nav Drawer</string>
	<string name="userNavDrawer">User Nav Drawer</string>

	<!-- In App Billing -->
	<string name="inAppBilling">In App Billing</string>

	<!-- Notifications -->
	<string name="notifications">Notifications</string>
	<string name="createNotification">Create Notification</string>
	<string name="cancelNotifications">Cancel Notifications</string>
	<string name="notificationTicker">Ticker example</string>
	<string name="notificationTitle">Title example</string>
	<string name="notificationDescription">Description example</string>

	<!-- Toasts -->
	<string name="toasts">Toasts</string>
	<string name="displayNormalToast">Display Normal Toast</string>
	<string name="displayInfoToast">Display Info Toast</string>
	<string name="displayWarningToast">Display Warning Toast</string>
	<string name="displayErrorToast">Display Error Toast</string>
	<string name="normalToastMessage">This is a normal Toast</string>
	<string name="infoToastMessage">This is an info Toast</string>
	<string name="warningToastMessage">This is a warning Toast</string>
	<string name="errorToastMessage">This is an error Toast</string>

	<!-- Tablets -->
	<string name="tablets">Tablets</string>
	<string name="leftAction">Left Action</string>
	<string name="rightAction">Right Action</string>

	<!-- Loading -->
	<string name="loading">Loading &amp; Refresh</string>
	<string name="blockingLoading">Blocking Loading</string>
	<string name="customBlockingLoading">Custom Blocking Loading</string>
	<string name="showLoading">Show Loading</string>
	<string name="dismissLoading">Dismiss Loading</string>
	<string name="nonBlockingLoading">Non Blocking Loading</string>
	<string name="swipeRefresLoading">Swipe Refresh Loading</string>

	<!-- Hero -->
	<string name="hero">Hero &amp; Parallax</string>

	<!-- Recycler View -->
	<string name="recyclerView">Recycler View</string>
	<string name="noResults">No Results</string>

	<!-- Tablets -->
	<string name="openDetail">Open Detail</string>

	<!-- About -->
	<string name="shareMessage">Jdroid - Application Framework for Android and Java apps. Download the sample app on your Android.
		%1$s</string>

</resources>
